--- a/src/components/Menus/NavigationTreeMenu/navigationTreeMenu.scss
+++ b/src/components/Menus/NavigationTreeMenu/navigationTreeMenu.scss
@@ -23,11 +23,11 @@ $primary-tree-toggler-down-active: url("data:image/svg+xml,%3Csvg width='20' hei
     margin-top: 100px;
     margin-bottom: 20px;
 
-    .p-scrollpanel-bar {
+    /*.p-scrollpanel-bar {
       background-color: $primary-color-scroll;
       border-radius: 4px;
       width: 5px;
-    }
+    }*/
 
     .nav-tree-menu {
       color: $primary-text-color2;
