--- a/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
+++ b/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
@@ -53,12 +53,41 @@
     }
 
     .filter-main {
+      height: calc(100% - 90px);
 
       .sec-header {
+        width: 85%;
+        margin: 0px auto;
+
+        & > span {
+          display: inline-block;
+          margin: 10px 0px;
+          &.add {
+            position: relative;
+            float: right;
+            top:-3px;
+          }
+          &.clear {
+            position: relative;
+            top:3px;
+          }
+        }
+
+        .filter-sec-title{
+          color: $primary-color-active;
+          margin-right: 20px;
+        }
 
         .filter-sec-button {
-          width: 21px;
-          height: 21px;
+          &.add {
+            width: 23px;
+            height: 23px;
+          }
+          &.clear {
+            width: 20px;
+            height: 20px;
+          }
+
           .filter-clear-ico:before {
             content: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z' fill='%23806CE9'/%3E%3C/svg%3E%0A");
           }
@@ -70,5 +99,45 @@
 
       }
 
+      .filter-items-main {
+        height: calc(100% - 58px);
+        overflow: hidden;
+
+        .scroll-panel {
+          width: 85%;
+          height: 100%;
+          margin: 0px auto;
+        }
+
+        .filter-items {
+          width: 100%;
+          height: 100%;
+
+          &.hide {
+            display: none;
+          }
+        }
+
+        .filter-add-bar {
+          width: 100%;
+          height: 0px;
+          //box-shadow: 5px 5px 5px -5px $primary-back-color;
+          transition: height 0.5s;
+          -webkit-transition: height 0.5s;
+          -o-transition: height 0.5s;
+          -moz-transition: height 0.5s;
+
+          &.show {
+            //background-color: white;
+            height: 100%;
+            transition: height 0.5s;
+            -webkit-transition: height 0.5s;
+            -o-transition: height 0.5s;
+            -moz-transition: height 0.5s;
+          }
+        }
+
+
+      }
     }
 }
