--- a/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
+++ b/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
@@ -121,7 +121,7 @@
         .filter-add-bar {
           width: 100%;
           height: 0px;
-          //box-shadow: 5px 5px 5px -5px $primary-back-color;
+          box-shadow: 5px 5px 5px -5px $primary-back-color;
           transition: height 0.5s;
           -webkit-transition: height 0.5s;
           -o-transition: height 0.5s;
@@ -130,6 +130,7 @@
           &.show {
             //background-color: white;
             height: 100%;
+            box-shadow: 5px 5px 5px -5px $primary-back-color;
             transition: height 0.5s;
             -webkit-transition: height 0.5s;
             -o-transition: height 0.5s;
