--- a/src/components/Menus/NavigationBaseMenu/navigationBaseMenu.scss
+++ b/src/components/Menus/NavigationBaseMenu/navigationBaseMenu.scss
@@ -6,7 +6,7 @@
   background-color: $primary-block-back-color;
   margin-right: 2px;
   text-align: center;
-  z-index: 10001;
+  //z-index: 10001;
 
   hr {
     width: 38%;
