--- a/src/components/layouts/BaseLayout/CheckedToolbarSection/checkedToolbarSection.scss
+++ b/src/components/layouts/BaseLayout/CheckedToolbarSection/checkedToolbarSection.scss
@@ -26,13 +26,14 @@
   & > div {
     display: inline-block;
 
-    &.items-count-ico {
+    //&.items-count-ico {
+    &.items-count-uncheck {
       margin-left: 50px;
       margin-right: 10px;
-      &:before {
+      /*&:before {
         height: inherit;
         content: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.11 18 18 17.1 18 16V2C18 0.9 17.11 0 16 0ZM7 14L2 9L3.41 7.59L7 11.17L14.59 3.58L16 5L7 14Z' fill='%23C2C2C4'/%3E%3C/svg%3E");;
-      }
+      }*/
     }
 
     &.items-count {
