Start rebuild data view.

--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -2,9 +2,15 @@
 
 .data_grid_view {
 
+
+  table {
+
+  }
+
+
   .p-datatable table {
     width: 100%;
-    table-layout: auto;
+    table-layout: fixed;
   }
 
   .p-datatable-scrollable-wrapper {
