--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -344,6 +344,10 @@
             &:hover {
               background-color: $primary-table-body-active;
             }
+
+            &.p-highlight {
+              background-color: $primary-table-body-active;
+            }
           }
         }
       }
