--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,8 @@ html, body, #root {
   background-color: $primary-back-color;
   width: 100%;
   height: 100%;
+  scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;
+  scrollbar-width: thin;
 }
 
 /* disabled select all text on site */
