--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -156,7 +156,11 @@
     }
 
     .p-datatable-scrollable-wrapper {
-      height: calc(100% - 55px);
+      /*height: calc(100% - 55px);*/
+      height: calc(100vh - 140px);
+      overflow-y: auto;
+      scrollbar-width: thin;
+
       background-color: $primary-block-back-color;
       padding: 25px 12px 12px 12px;
       border-radius: 10px;
@@ -206,13 +210,96 @@
               }
             }
 
+            .grid-add-column.p-multiselect {
+              width: 20px !important;
+              border: none !important;
+              position: relative;
+              z-index: 2 !important;
+              right: 3px;
+              top: -7px;
+
+              .p-multiselect-label {
+                display: none;
+              }
+              .p-multiselect-trigger {
+
+                .p-multiselect-trigger-icon {
+                  &:before {
+                    content: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.5 12.5H12.5V21.5H9.5V12.5H0.5V9.5H9.5V0.5H12.5V9.5H21.5V12.5Z' fill='%23C2C2C4'/%3E%3C/svg%3E%0A");
+                  }
+
+                  &:hover {
+                    &:before {
+                      content: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.5 12.5H12.5V21.5H9.5V12.5H0.5V9.5H9.5V0.5H12.5V9.5H21.5V12.5Z' fill='%23806CE9'/%3E%3C/svg%3E%0A");
+                    }
+                  }
+                }
+              }
+
+              .p-multiselect-panel {
+                background-color: $primary-table-body-active-h;
+                display: none;
+                border: none;
+                z-index: 3 !important;
+                display: block;
+                top: 14px !important;
+                right: -7px !important;
+                left: auto !important;
+                overflow-x: hidden;
+                overflow-y: auto;
+                padding: 5px 5px;
+
+                .p-multiselect-header {
+                  display: none;
+                }
+
+                .p-multiselect-items-wrapper {
+                  max-height: 200px;
+                  max-width: 200px;
+                  /*scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;*/
+                  scrollbar-width: thin;
+
+                  .p-multiselect-items {
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 12px;
+                    line-height: 14px;
+                    color: $primary-text-color3;
+                    padding: 0px;
+
+                    .p-multiselect-item {
+                      height: 24px;
+                      margin: 5px 2px;
+                      padding: 5px 25px 0px 0px;
+
+                      .p-checkbox {
+                        margin: 0px 5px;
+
+                        .p-checkbox-box {
+                          width: 12px;
+                          height: 12px;
+                        }
+                      }
+
+                      &:hover {
+                        background-color: $primary-table-body-active;
+                      }
+
+                      &.p-highlight {
+                        background-color: $primary-table-body-active;
+                      }
+                    }
+                  }
+                }
+              }
+            }
           }
         }
 
         .p-datatable-scrollable-body {
 
           height: auto;
-          max-height: calc(100vh - 225px);
+          //max-height: calc(100vh - 225px);
           overflow-y: auto;
           display: block;
           position: relative;
@@ -257,7 +344,6 @@
         }
 
         .p-datatable-scrollable-footer {
-
         }
 
       }
@@ -265,16 +351,74 @@
 
     &.minimize-height-body {
       .p-datatable-scrollable-wrapper {
+        height: calc(100vh - 240px);
         .p-datatable-scrollable-view {
           .p-datatable-scrollable-body {
-            max-height: calc(100vh - 325px);
+            //max-height: calc(100vh - 325px);
           }
         }
       }
     }
   }
 
-  .grid-add-column.p-multiselect {
+  .p-multiselect-panel {
+    background-color: $primary-table-body-active-h;
+    //display: none;
+    border: none;
+    z-index: 3 !important;
+    //display: block;
+    top: 115px !important;
+    right: 23px !important;
+    left: auto !important;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 5px 5px;
+
+    .p-multiselect-header {
+      display: none;
+    }
+
+    .p-multiselect-items-wrapper {
+      max-height: 200px;
+      max-width: 200px;
+      scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;
+      scrollbar-width: thin;
+
+      .p-multiselect-items {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        color: $primary-text-color3;
+        padding: 0px;
+
+        .p-multiselect-item {
+          height: 24px;
+          margin: 5px 2px;
+          padding: 5px 25px 0px 0px;
+
+          .p-checkbox {
+            margin: 0px 5px;
+
+            .p-checkbox-box {
+              width: 12px;
+              height: 12px;
+            }
+          }
+
+          &:hover {
+            background-color: $primary-table-body-active;
+          }
+
+          &.p-highlight {
+            background-color: $primary-table-body-active;
+          }
+        }
+      }
+    }
+  }
+
+  /*.grid-add-column.p-multiselect {
     width: 20px !important;
     border: none !important;
     position: absolute;
@@ -357,6 +501,6 @@
         }
       }
     }
-  }
+  }*/
 
 }
