--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -67,6 +67,7 @@
         width: 26px;
         font-size: 12px;
         line-height: 14px;
+        outline: none; //for chrome agent
 
         &.p-disabled {
           opacity: 0.4;
@@ -332,7 +333,7 @@
 
                 &.p-highlight {
                   border: 0.5px solid $primary-table-body-active;
-                  outline: 0.5px solid $primary-table-body-active;
+                  outline: 0.5px solid $primary-table-body-active !important;
 
                   &:hover {
                     background-color: $primary-table-body-active-h;
