--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -42,6 +42,9 @@ $primary-color-active: #806CE9;
 $primary-color-scroll: #806CE9;
 $primary-color-addon: #E9E9E9;
 $primary-color-addon-border: #393A40;
+$primary-color-input: #6D6E77;
+$primary-color-input-border: #C2C2C4;
+$primary-color-input-disabled: #303238;
 
 
 $primary-menu-hover: #393A40;
