--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -8,9 +8,11 @@
 
   .p-datatable {
     height: 100%;
+    width: 100%;
 
     table {
       table-layout: auto !important;
+      width: 100%;
 
       .p-selection-column {
         text-align: center;
@@ -160,144 +162,72 @@
       height: calc(100vh - 140px);
       overflow-y: auto;
       scrollbar-width: thin;
+      width: 100%;
 
       background-color: $primary-block-back-color;
-      padding: 25px 12px 12px 12px;
+      padding: 12px 12px 12px 12px;
       border-radius: 10px;
 
       .p-datatable-scrollable-view {
         height: 100%;
+        width: 100%;
 
         .p-datatable-scrollable-header {
           margin-bottom: 10px;
+          width: 100%;
+          /*width: calc(100% + 24px);
+          margin-left: -12px;
+          padding: 0px 12px;
+          background-color: #393A40 !important;*/
 
-          table {
-            .p-sortable-column-icon {
-              margin-left: 5px;
+          .p-datatable-scrollable-header-box {
+            margin-right: 0px !important;
 
-              &.pi-sort-amount-down {
-                color: $primary-button-color;
-              }
+            table {
+              .p-sortable-column-icon {
+                margin-left: 5px;
 
-              &.pi-sort-amount-up-alt {
-                color: $primary-button-color;
-              }
-            }
+                &.pi-sort-amount-down {
+                  color: $primary-button-color;
+                }
 
-            tr {
-              height: 40px;
-            }
-
-            th {
-              background-color: $primary-table-header !important;
-              border-right: 0.5px solid $primary-text-color1 !important;
-              border-radius: 0px !important;
-              color: $primary-text-color2 !important;
-              font-style: normal;
-              font-weight: 600;
-              font-size: 14px;
-              line-height: 17px;
-
-              &:first-child {
-                border-top-left-radius: 5px !important;
-                border-bottom-left-radius: 5px !important;
-              }
-
-              &:last-child {
-                border-top-right-radius: 5px !important;
-                border-bottom-right-radius: 5px !important;
-                border-right: none !important;
-              }
-            }
-
-            .grid-add-column.p-multiselect {
-              width: 20px !important;
-              border: none !important;
-              position: relative;
-              z-index: 2 !important;
-              right: 3px;
-              top: -7px;
-
-              .p-multiselect-label {
-                display: none;
-              }
-              .p-multiselect-trigger {
-
-                .p-multiselect-trigger-icon {
-                  &:before {
-                    content: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.5 12.5H12.5V21.5H9.5V12.5H0.5V9.5H9.5V0.5H12.5V9.5H21.5V12.5Z' fill='%23C2C2C4'/%3E%3C/svg%3E%0A");
-                  }
-
-                  &:hover {
-                    &:before {
-                      content: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.5 12.5H12.5V21.5H9.5V12.5H0.5V9.5H9.5V0.5H12.5V9.5H21.5V12.5Z' fill='%23806CE9'/%3E%3C/svg%3E%0A");
-                    }
-                  }
+                &.pi-sort-amount-up-alt {
+                  color: $primary-button-color;
                 }
               }
 
-              .p-multiselect-panel {
-                background-color: $primary-table-body-active-h;
-                display: none;
-                border: none;
-                z-index: 3 !important;
-                display: block;
-                top: 14px !important;
-                right: -7px !important;
-                left: auto !important;
-                overflow-x: hidden;
-                overflow-y: auto;
-                padding: 5px 5px;
+              tr {
+                height: 40px;
+                //width: 100%;
+              }
 
-                .p-multiselect-header {
-                  display: none;
+              th {
+                background-color: $primary-table-header !important;
+                border-right: 0.5px solid $primary-text-color1 !important;
+                border-radius: 0px !important;
+                color: $primary-text-color2 !important;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 17px;
+
+                &:first-child {
+                  border-top-left-radius: 5px !important;
+                  border-bottom-left-radius: 5px !important;
                 }
 
-                .p-multiselect-items-wrapper {
-                  max-height: 200px;
-                  max-width: 200px;
-                  /*scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;*/
-                  scrollbar-width: thin;
-
-                  .p-multiselect-items {
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 12px;
-                    line-height: 14px;
-                    color: $primary-text-color3;
-                    padding: 0px;
-
-                    .p-multiselect-item {
-                      height: 24px;
-                      margin: 5px 2px;
-                      padding: 5px 25px 0px 0px;
-
-                      .p-checkbox {
-                        margin: 0px 5px;
-
-                        .p-checkbox-box {
-                          width: 12px;
-                          height: 12px;
-                        }
-                      }
-
-                      &:hover {
-                        background-color: $primary-table-body-active;
-                      }
-
-                      &.p-highlight {
-                        background-color: $primary-table-body-active;
-                      }
-                    }
-                  }
+                &:last-child {
+                  border-top-right-radius: 5px !important;
+                  border-bottom-right-radius: 5px !important;
+                  border-right: none !important;
                 }
               }
+
             }
           }
         }
 
         .p-datatable-scrollable-body {
-
           height: auto;
           //max-height: calc(100vh - 225px);
           overflow-y: auto;
@@ -308,15 +238,17 @@
           scrollbar-width: thin;
 
           table {
-            width: 100%;
+            //width: 100%;
             table-layout: auto !important;
             height: 100%;
             border-collapse: separate;
             border-spacing: 0px 5px;
 
             tbody {
+              //width: 100%;
 
               .p-datatable-row {
+                width: 100%;
                 height: 40px;
                 margin: 5px 0px;
                 font-style: normal;
@@ -348,7 +280,6 @@
 
       }
     }
-
     &.minimize-height-body {
       .p-datatable-scrollable-wrapper {
         height: calc(100vh - 240px);
@@ -361,70 +292,13 @@
     }
   }
 
-  .p-multiselect-panel {
-    background-color: $primary-table-body-active-h;
-    //display: none;
-    border: none;
-    z-index: 3 !important;
-    //display: block;
-    top: 115px !important;
-    right: 23px !important;
-    left: auto !important;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 5px 5px;
-
-    .p-multiselect-header {
-      display: none;
-    }
-
-    .p-multiselect-items-wrapper {
-      max-height: 200px;
-      max-width: 200px;
-      scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;
-      scrollbar-width: thin;
-
-      .p-multiselect-items {
-        font-style: normal;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 14px;
-        color: $primary-text-color3;
-        padding: 0px;
-
-        .p-multiselect-item {
-          height: 24px;
-          margin: 5px 2px;
-          padding: 5px 25px 0px 0px;
-
-          .p-checkbox {
-            margin: 0px 5px;
-
-            .p-checkbox-box {
-              width: 12px;
-              height: 12px;
-            }
-          }
-
-          &:hover {
-            background-color: $primary-table-body-active;
-          }
-
-          &.p-highlight {
-            background-color: $primary-table-body-active;
-          }
-        }
-      }
-    }
-  }
-
-  /*.grid-add-column.p-multiselect {
+  .p-multiselect.grid-add-column {
     width: 20px !important;
     border: none !important;
     position: absolute;
-    z-index: 2 !important;
-    right: 7px;
-    top: 62px;
+    z-index: 1 !important;
+    right: 16px;
+    top: 80px;
 
     .p-multiselect-label {
       display: none;
@@ -442,15 +316,14 @@
           }
         }
       }
-
     }
 
     .p-multiselect-panel {
       background-color: $primary-table-body-active-h;
-      display: none;
+      //display: none;
       border: none;
       z-index: 3 !important;
-      display: block;
+      //display: block;
       top: 14px !important;
       right: -7px !important;
       left: auto !important;
@@ -465,7 +338,7 @@
       .p-multiselect-items-wrapper {
         max-height: 200px;
         max-width: 200px;
-        scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;
+        /*scrollbar-color: $primary-color-scroll  $primary-table-body-active-h;*/
         scrollbar-width: thin;
 
         .p-multiselect-items {
@@ -501,6 +374,6 @@
         }
       }
     }
-  }*/
+  }
 
 }
