Add lazy loading

--- a/src/App.scss
+++ b/src/App.scss
@@ -230,7 +230,7 @@ hr {
       overflow-x: auto;
     }
   }
-  .cs-admin-login {
+  .admin-login-block {
     display: flex;
     flex-direction: row;
     margin: 0;
