Bugfix route, login, rebuild main section, rebuild change page and sorter.

--- a/src/App.scss
+++ b/src/App.scss
@@ -210,6 +210,9 @@ hr {
   }
 }
 
+.pi-spinner {
+  color: $primary-text-color2
+}
 
 .cs-admin {
   width: 100vw;
@@ -238,8 +241,6 @@ hr {
     height: 100%;
   }
 }
-
-
 
 
 
