--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $primary-text-color5: #806CE9;
 // $primary-text-font-family: Lato;
 
 $logoLink: url(../assets/img/Rectangle.png);
-$backgroundLink: url(../assets/img/szabo-viktor-rM_NWTFYUb4-unsplash.png);
+$backgroundLogin: url(../assets/img/login-back.png);
 
 @font-face {
   font-family: 'LatoFamily';
