--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -39,7 +39,9 @@ $primary-table-body-active-h: #474271;
 $primary-table-paging: #393A40;
 $primary-buttom-sidebar-color: #6D6E77;
 $primary-color-active: #806CE9;
+$primary-color-border: #806CE9;
 $primary-color-scroll: #806CE9;
+$primary-menuitem-link: #806CE9;
 $primary-color-addon: #E9E9E9;
 $primary-color-addon-border: #393A40;
 $primary-color-input: #6D6E77;
@@ -63,5 +65,5 @@ $primary-button-color-cancel: #FF5556;
 $primary-button-color-cancel-h: #FF7B7C;
 $primary-button-color-dop: #5AC4FF;
 $primary-button-color-dop-h: #C9EBFF;
-
+$primary-button-color-grid: #212327;
 
