Add catalog preview

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -40,6 +40,7 @@ $primary-table-paging: #393A40;
 $primary-buttom-sidebar-color: #6D6E77;
 $primary-color-active: #806CE9;
 $primary-color-border: #806CE9;
+$primary-color-border-active: #474271;
 $primary-color-scroll: #806CE9;
 $primary-menuitem-link: #806CE9;
 $primary-color-addon: #E9E9E9;
