--- a/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
+++ b/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
@@ -130,8 +130,68 @@
           width: 100%;
           height: 100%;
 
+
           &.hide {
             display: none;
+          }
+          .p-scrollpanel-content {
+            color: $primary-text-color2;
+            font-family: Lato;
+            font-style: normal;
+            font-weight: bold;
+            padding-right: 30px;
+            .p-label {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding-bottom: 10px;
+              padding-top: 25px;
+              span{
+                font-size: 16px;
+                line-height: 19px;
+              }
+              .p-dropdown {
+                .p-dropdown-label {
+                  background-color: $primary-block-back-color;
+                  border: none;
+                  display: flex;
+                  justify-content: flex-end;
+                  align-items: center;
+                  font-size: 14px;
+                  line-height: 16px;
+                }
+                .p-dropdown-trigger {
+                  width: 15px;
+                  .p-dropdown-trigger-icon.pi.pi-chevron-down.p-clickable:before {
+                    content: "\e906";
+                  }
+                }
+                .p-dropdown-items {
+                  background-color: $primary-menuitem-link;
+                  .p-dropdown-item:hover {
+                    background-color: $primary-table-body-active-h;
+                  }
+                }
+              }
+            }
+            .p-inputtext {
+              width: 100%;
+              height: 35px;
+              background-color: rgba(194,194,196, 0.1);
+              //background-color: $primary-color-input-border;
+              border: none;
+              border-bottom: 1px solid $primary-color-input-border;
+              color: $primary-text-color3;
+              font-size: 14px;
+            }
+            .scroll-panel-button {
+              text-align: center;
+              margin-top: 15px;
+              padding-bottom: 10px;
+              .p-button {
+                color: $primary-text-color3;
+              }
+            }
           }
         }
 
@@ -152,6 +212,56 @@
             -webkit-transition: height 0.5s;
             -o-transition: height 0.5s;
             -moz-transition: height 0.5s;
+            .p-scrollpanel {
+              width: 100%;
+              .p-scrollpanel-content {
+                background-color: $primary-table-header;
+                color: $primary-text-color3;
+                font-family: Lato;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 16px;
+                line-height: 19px;
+                .filter-scroll-panel {
+                  .p-title-checked {
+                    width: 100%;
+                    padding: 25px;
+                    margin: 0 auto;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    .p-checkbox {
+                      background-color: $primary-color-border-active;
+                      align-self: center;
+                    }
+                    .p-title-text {
+                      padding-left: 10px;
+                    }
+                  }
+                  .p-title-checked:hover {
+                    background-color: $primary-table-body-hover;
+                  }
+                  .p-title-unchecked:hover {
+                    background-color: $primary-table-body-hover;
+                  }
+                  .p-title-unchecked {
+                    width: 100%;
+                    padding: 25px;
+                    margin: 0 auto;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    .p-checkbox {
+                      background-color: $primary-table-header;
+                      align-self: center;
+                    }
+                    .p-title-text {
+                      padding-left: 10px;
+                    }
+                  }
+                }
+              }
+            }
           }
         }
 
