--- a/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
+++ b/src/components/layouts/BaseLayout/FilterSection/filterSection.scss
@@ -134,12 +134,89 @@
           &.hide {
             display: none;
           }
+          .scroll-panel-button {
+            text-align: center;
+            margin-top: 15px;
+            padding-bottom: 10px;
+            .p-button {
+              color: $primary-text-color3;
+            }
+          }
           .p-scrollpanel-content {
             color: $primary-text-color2;
             font-family: Lato;
             font-style: normal;
             font-weight: bold;
             padding-right: 30px;
+            height: calc(100% - 60px);
+            .p-calendar {
+              width: 100%;
+              .p-datepicker-prev, .p-datepicker-next {
+                color: $primary-text-color2;
+              }
+              .p-datepicker-group {
+                background-color: $primary-table-header;
+                .p-datepicker-other-month {
+                  color: $primary-text-color5;
+                }
+                .p-datepicker-calendar {
+                  tbody {
+                    td:hover {
+                      background-color: $primary-color-active;
+                    }
+                    .p-datepicker-other-month:hover {
+                      background-color: $primary-table-header;
+                    }
+                    td {
+                      .p-highlight {
+                        background-color: $primary-color-active;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
+            .p-multiselect {
+              width: 100%;
+              height: 35px;
+              background-color: rgba(194,194,196, 0.1);
+              //background-color: $primary-color-input-border;
+              border: none;
+              border-bottom: 1px solid $primary-color-input-border;
+              color: $primary-text-color3;
+              font-size: 14px;
+              display: flex;
+              align-items: center;
+              .p-multiselect-header {
+                display: none;
+              }
+              .p-multiselect-items-wrapper {
+                background-color: $primary-table-header;
+                .p-multiselect-items {
+                  padding-left: 5px;
+                  .p-multiselect-item {
+                    padding: 10px 0px 10px 0px;
+                  }
+                  .p-multiselect-item:hover {
+                    background-color: $primary-color-active;
+                  }
+                }
+              }
+            }
+
+            .p-inputnumber {
+              width: 100%;
+            }
+            .p-inplace-content {
+              .p-inputtext {
+                height: auto;
+              }
+              div {
+                text-align: center;
+              }
+            }
+
             .p-label {
               display: flex;
               justify-content: space-between;
@@ -183,14 +260,6 @@
               border-bottom: 1px solid $primary-color-input-border;
               color: $primary-text-color3;
               font-size: 14px;
-            }
-            .scroll-panel-button {
-              text-align: center;
-              margin-top: 15px;
-              padding-bottom: 10px;
-              .p-button {
-                color: $primary-text-color3;
-              }
             }
           }
         }
