--- a/src/App.scss
+++ b/src/App.scss
@@ -117,6 +117,11 @@ hr {
     &:hover {
       background-color: $primary-button-color-dop-h;
     }
+    &.p-disabled {
+      &:hover {
+        background-color: $primary-button-color-dop;
+      }
+    }
   }
 
   &.button-success {
@@ -124,6 +129,12 @@ hr {
 
     &:hover {
       background-color: $primary-button-color-add-h;
+    }
+
+    &.p-disabled {
+      &:hover {
+        background-color: $primary-button-color-add;
+      }
     }
   }
 
@@ -138,6 +149,12 @@ hr {
     &:hover {
       background-color: $primary-button-color-h;
     }
+
+    &.p-disabled {
+      &:hover {
+        background-color: $primary-button-color;
+      }
+    }
   }
 
   &.button-delete-cancel {
@@ -150,6 +167,12 @@ hr {
 
     &:hover {
       background-color: $primary-button-color-cancel-h;
+    }
+
+    &.p-disabled {
+      &:hover {
+        background-color: $primary-button-color-cancel;
+      }
     }
   }
 
@@ -266,6 +289,21 @@ hr {
   color: $primary-text-color2
 }
 
+.progress-div {
+  height: 110px;
+  text-align: center;
+}
+
+body .p-disabled, body .p-component:disabled {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+
+.p-disabled, .p-disabled a {
+  cursor: default !important;
+}
+
+
 .cs-admin {
   width: 100%;
   height: 100%;
@@ -289,6 +327,23 @@ hr {
 }
 
 
+
+@keyframes ui-progress-spinner-color {
+  100%,
+  0% {
+    stroke: $primary-text-color3;
+  }
+  40% {
+    stroke: $primary-text-color2;
+  }
+  66% {
+    stroke: $primary-text-color2;
+  }
+  80%,
+  90% {
+    stroke: $primary-text-color1;
+  }
+}
 
 
 
