Routes, new categories, little bugfixes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import '~primereact/resources/primereact.min.css';
 @import '~primeicons/primeicons.css';
 @import "~primeflex/primeflex.css";
+@import '~react-toastify/dist/ReactToastify.css';
 @import "styles/variables";
 
 html, body, #root {
