--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -47,6 +47,7 @@ $primary-color-addon: #E9E9E9;
 $primary-color-addon-border: #393A40;
 $primary-color-input: #6D6E77;
 $primary-color-input-border: #C2C2C4;
+$primary-color-tabview-border: #FFFFFF;
 $primary-color-input-disabled: #303238;
 
 
