--- a/src/components/layouts/DataTreeView/dataTreeView.scss
+++ b/src/components/layouts/DataTreeView/dataTreeView.scss
@@ -216,13 +216,17 @@
                   border-bottom-left-radius: 5px !important;
                 }
 
+                &:nth-last-child(2) {
+                  border-right: none !important;
+                }
+
                 &:last-child {
                   border-top-right-radius: 5px !important;
                   border-bottom-right-radius: 5px !important;
                   border-right: none !important;
                 }
-              }
 
+              }
             }
           }
         }
@@ -247,7 +251,7 @@
             tbody {
               //width: 100%;
 
-              .p-treetable-row {
+              tr {
                 width: 100%;
                 height: 40px;
                 margin: 5px 0px;
