--- a/src/components/layouts/DataGridView/dataGridView.scss
+++ b/src/components/layouts/DataGridView/dataGridView.scss
@@ -251,7 +251,8 @@
             tbody {
               //width: 100%;
 
-              .p-datatable-row {
+              //> .p-datatable-row {
+              > tr {
                 width: 100%;
                 height: 40px;
                 margin: 5px 0px;
