--- a/src/components/layouts/DataTreeView/dataTreeView.scss
+++ b/src/components/layouts/DataTreeView/dataTreeView.scss
@@ -251,7 +251,7 @@
             tbody {
               //width: 100%;
 
-              tr {
+              > tr {
                 width: 100%;
                 height: 40px;
                 margin: 5px 0px;
