--- a/src/components/layouts/BaseLayout/MainSection/mainSection.scss
+++ b/src/components/layouts/BaseLayout/MainSection/mainSection.scss
@@ -4,7 +4,7 @@
   .main-section {
     flex-basis: auto;
     flex-grow: 1;
-    position: relative;
+    /*position: relative;*/
     display: flex;
     flex-direction: column;
 
