--- a/src/components/layouts/BaseLayout/baseLayout.scss
+++ b/src/components/layouts/BaseLayout/baseLayout.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  position: relative;
+  /*position: relative;*/
 
   .header {
     //height: 70px;
