add ContextMenu to table(tree)Grid

--- a/src/components/Catalog/CatalogEdit/CatalogCard/catalogCard.scss
+++ b/src/components/Catalog/CatalogEdit/CatalogCard/catalogCard.scss
@@ -4,6 +4,9 @@
   flex-grow: 1;
   overflow-x: auto;
   height: calc(100% - 162px);
+  .body-for-main-item {
+    position: relative;
+  }
   .p-contextmenu.p-component {
     border-color: $primary-color-border;
     //left: 600px!important;
