--- a/src/components/Categories/Cat2Attrs/cat2Attr.scss
+++ b/src/components/Categories/Cat2Attrs/cat2Attr.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  position: relative;
+  //position: relative;
 
   .header {
     //height: 70px;
@@ -41,7 +41,12 @@
     .grid-card {
       flex-grow: 1;
       overflow-x: auto;
-      height: calc(100% - 162px);
+      height: calc(100% - 100px);
+
+
+      .body-for-main-item {
+        position: relative;
+      }
 
       .p-contextmenu.p-component {
         border-color: $primary-color-border;
@@ -95,7 +100,7 @@
         position: relative;
         .p-datatable-scrollable-wrapper {
           margin: 10px auto;
-          height: calc(100vh - 190px);
+          height: calc(100vh - 120px);
           //overflow-y: auto;
           //scrollbar-width: thin;
           width: 96%;
