add Cat2Attr model

--- a/src/components/Categories/Cat2Attrs/cat2Attr.scss
+++ b/src/components/Categories/Cat2Attrs/cat2Attr.scss
@@ -27,6 +27,11 @@
       width: 96%;
     }
 
+    .grid-button {
+      width: 96%;
+      margin: 0 auto;
+    }
+
     .button-bottom-unload {
       min-width: 36px;
       .plus-minus-ico {
