--- a/src/components/Messages/messages.scss
+++ b/src/components/Messages/messages.scss
@@ -34,15 +34,16 @@
     .p-multiselect-trigger {
       display: none;
     }
-    .p-datatable-row {
-      .container-in-model {
-        display: flex;
-        .button-in-model {
-          min-width: 32px;
-          background-color: transparent;
-          color: $primary-text-color3;
-        }
-      }
+  }
+}
+
+.send {
+  display: flex;
+  align-items: center;
+  .pi.pi-bookmark {
+    padding-right: 15px;
+    &:before {
+      content: url("data:image/svg+xml,%3Csvg width='14' height='18' viewBox='0 0 14 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 0H2C0.9 0 0.0100002 0.9 0.0100002 2L0 18L7 15L14 18V2C14 0.9 13.1 0 12 0Z' fill='%23FF5556'/%3E%3C/svg%3E%0A");
     }
   }
 }
